--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -116,6 +116,12 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 50px;
   }
 }
+@media (max-width: 576px) {
+  .main .main__container .main__row .main__body h1 {
+    font-size: 35px;
+    line-height: 50px;
+  }
+}
 
 .contacts .contacts__row .contacts__body .contacts__text h2, .tracking .tracking__row .tracking__content h2, .services .services__row h2, .about .about__row .about__mission .mission__text h2, .about .about__row .about__preface .preface__text h2, .advantages .advantages__row h2 {
   font-family: "Montserrat", sans-serif;
@@ -149,7 +155,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .footer .footer__row .footer__contacts li .footer__email a, .footer .footer__row .footer__contacts li .footer__phone a, .contacts .contacts__row .contacts__body .contacts__text ul .contacts__email a, .contacts .contacts__row .contacts__body .contacts__text ul .contacts__phones-sales ul li a, .contacts .contacts__row .contacts__body .contacts__text ul .contacts__phones-service ul li a, .header .header__row .header__top .header-top__container .header__contacts .header__email a, .header .header__row .header__top .header-top__container .header__contacts .header__phone a {
   font-family: "Montserrat", sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 18px;
   line-height: 24px;
   color: #228bc9;
@@ -182,7 +188,7 @@ body {
 
 @media (max-width: 768px) {
   .content {
-    padding-top: 140px;
+    padding-top: 129px;
   }
 }
 @media (max-width: 576px) {
@@ -433,6 +439,11 @@ body {
   box-shadow: 0px -5px 5px -5px rgba(255, 255, 255, 0.6) inset;
   text-align: center;
 }
+@media only screen and (min-device-width: 320px) and (orientation: landscape) {
+  .header .header__row .header__bottom .header-bottom__container .menu__burger .burger__row .burger__list .burger__item {
+    padding: 20px 0;
+  }
+}
 .header .header__row .header__bottom .header-bottom__container .menu__burger .burger__row .burger__list .burger__item a {
   display: block;
   color: #fff;
@@ -486,8 +497,8 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 400px;
-          flex: 0 1 400px;
+      -ms-flex: 0 1 500px;
+          flex: 0 1 500px;
 }
 @media (max-width: 768px) {
   .main .main__container .main__row .main__body {
@@ -561,6 +572,11 @@ body {
 @media (max-width: 1200px) {
   .main .main__container .main__row .main__globus {
     right: 7%;
+  }
+}
+@media (max-width: 992px) {
+  .main .main__container .main__row .main__globus {
+    right: 3%;
   }
 }
 @media (max-width: 992px) {
@@ -885,31 +901,31 @@ body {
 }
 @-webkit-keyframes anim_big-smoke {
   0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    -webkit-transform: translate(10px, 25px);
+            transform: translate(10px, 25px);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateY(-70px);
-            transform: translateY(-70px);
+    -webkit-transform: translate(10px, -55px);
+            transform: translate(10px, -55px);
     opacity: 0;
   }
 }
 @keyframes anim_big-smoke {
   0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    -webkit-transform: translate(10px, 25px);
+            transform: translate(10px, 25px);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateY(-70px);
-            transform: translateY(-70px);
+    -webkit-transform: translate(10px, -55px);
+            transform: translate(10px, -55px);
     opacity: 0;
   }
 }
@@ -921,8 +937,8 @@ body {
           animation-name: anim_little-smoke;
   -webkit-animation-duration: 5s;
           animation-duration: 5s;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  -webkit-animation-delay: 2.5s;
+          animation-delay: 2.5s;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   -webkit-animation-fill-mode: forwards;
@@ -932,31 +948,31 @@ body {
 }
 @-webkit-keyframes anim_little-smoke {
   0% {
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    -webkit-transform: translate(5px, 50px);
+            transform: translate(5px, 50px);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateY(-20px);
-            transform: translateY(-20px);
+    -webkit-transform: translate(5px, -20px);
+            transform: translate(5px, -20px);
     opacity: 0;
   }
 }
 @keyframes anim_little-smoke {
   0% {
-    -webkit-transform: translateY(50px);
-            transform: translateY(50px);
+    -webkit-transform: translate(5px, 50px);
+            transform: translate(5px, 50px);
     opacity: 0;
   }
   50% {
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateY(-20px);
-            transform: translateY(-20px);
+    -webkit-transform: translate(5px, -20px);
+            transform: translate(5px, -20px);
     opacity: 0;
   }
 }
@@ -1379,6 +1395,7 @@ body {
 }
 .contacts .contacts__row .contacts__body .contacts__text ul .contacts__location p {
   text-align: center;
+  font-weight: 500;
 }
 .contacts .contacts__row .contacts__body .contacts__text ul .contacts__phones-service p {
   margin-bottom: 10px;
@@ -1440,7 +1457,7 @@ body {
   color: #000000;
 }
 @media (hover), (min-width: 0\0 ), (min--moz-device-pixel-ratio: 0) {
-  .contacts .contacts__row .contacts__body .contacts__text ul .contacts__phones-sales ul li a a:hover {
+  .contacts .contacts__row .contacts__body .contacts__text ul .contacts__phones-sales ul li a:hover {
     color: #cc5ecc;
   }
 }
@@ -1457,7 +1474,7 @@ body {
   color: #000000;
 }
 @media (hover), (min-width: 0\0 ), (min--moz-device-pixel-ratio: 0) {
-  .contacts .contacts__row .contacts__body .contacts__text ul .contacts__email a a:hover {
+  .contacts .contacts__row .contacts__body .contacts__text ul .contacts__email a:hover {
     color: #cc5ecc;
   }
 }
