--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,6 +1,6 @@
 @import "null";
 //__________________________Fonts__________________________
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 //__________________________Colors__________________________
 $background-color: #f5f5f5;
 $second-background-color: #d7bfdf;
@@ -84,6 +84,10 @@ $hover-style: #cc5ecc;
     font-size: 38px;
     line-height: 50px;
   }
+  @include _576{
+    font-size: 35px;
+    line-height: 50px;
+  }
 }
 %h2-text-style{
   font-family: "Montserrat", sans-serif;
@@ -109,7 +113,7 @@ $hover-style: #cc5ecc;
 }
 %link-style{
   font-family: "Montserrat", sans-serif;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 18px;
   line-height: 24px;
   color: #228bc9;
@@ -134,7 +138,7 @@ body{
 }
 .content{
   @include _768(){
-    padding-top: 140px;
+    padding-top: 129px;
   }
   @include _576(){
     padding-top: 70px;
@@ -348,6 +352,11 @@ body{
                 -moz-box-shadow: 0px -5px 5px -5px rgba(255, 255, 255, 0.6) inset;
                 box-shadow: 0px -5px 5px -5px rgba(255, 255, 255, 0.6) inset;
                 text-align: center;
+                @media only screen
+                and (min-device-width: 320px)
+                and (orientation: landscape) {
+                  padding: 20px 0;
+                }
                 a{
                   display: block;
                   color: $elementary-text-color;
@@ -392,7 +401,7 @@ body{
       .main__body{
         display: flex;
         flex-direction: column;
-        flex: 0 1 400px;
+        flex: 0 1 500px;
         @include _768{
           flex: 1 1 auto;
           justify-content: space-between
@@ -446,7 +455,10 @@ body{
         top: 5%;
         right: 15%;
         @include _1200{
-            right: 7%;
+          right: 7%;
+        }
+        @include _992{
+          right: 3%;
         }
         svg{
           @include _992{
@@ -647,7 +659,7 @@ body{
           }
           @keyframes anim_big-smoke {
             0%{
-              transform: translateY(0) ;
+              transform: translate(10px, 25px) ;
               opacity: 0;
             }
             
@@ -656,7 +668,7 @@ body{
             }
             
             100% {
-              transform: translateY(-70px) ;
+              transform: translate(10px, -55px) ;
               opacity: 0;
             }
           }
@@ -665,14 +677,14 @@ body{
             opacity: 0;
             animation-name: anim_little-smoke;
             animation-duration: 5s;
-            animation-delay: 2s;
+            animation-delay: 2.5s;
             animation-iteration-count: infinite;
             animation-fill-mode: forwards;
             animation-timing-function: ease-in-out;
           }
           @keyframes anim_little-smoke {
             0%{
-              transform: translateY(50px) ;
+              transform: translate(5px, 50px) ;
               opacity: 0;
             }
             
@@ -681,7 +693,7 @@ body{
             }
             
             100% {
-              transform: translateY(-20px) ;
+              transform: translate(5px, -20px) ;
               opacity: 0;
             }
           }
@@ -1011,7 +1023,8 @@ body{
               margin-right: 5px;
             }
             p{
-              text-align: center
+              text-align: center;
+              font-weight: 500;
             }
           }
           .contacts__phones-service{
@@ -1081,11 +1094,11 @@ body{
                   transition: .3s;
                   @extend %link-style;
                   color: $main-text-color;
-                  @include support-hover(){
-                    a{
-                      &:hover{
-                        color: $hover-style;
-                      }
+                }
+                @include support-hover(){
+                  a{
+                    &:hover{
+                      color: $hover-style;
                     }
                   }
                 }
@@ -1100,15 +1113,15 @@ body{
             }
             a{
               transition: .3s;
-                  @extend %link-style;
-                  color: $main-text-color;
-                  @include support-hover(){
-                    a{
-                      &:hover{
-                        color: $hover-style;
-                      }
-                    }
-                  }
+              @extend %link-style;
+              color: $main-text-color; 
+            }
+            @include support-hover(){
+              a{
+                &:hover{
+                  color: $hover-style;
+                }
+              }
             }
           }
         }
