--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1043,7 +1043,7 @@ body{
                 margin-bottom: 10px;
                 &:first-of-type{
                   &:before{
-                    content: url("../../images/telephone.svg");
+                    content: url("../../images/mobile_vector-2.svg");
                     margin-right: 8.25px;
                   }
                 }
@@ -1082,7 +1082,7 @@ body{
                 margin-bottom: 10px;
                 &:first-of-type{
                   &:before{
-                    content: url("../../images/telephone.svg");
+                    content: url("../../images/mobile_vector-2.svg");
                     margin-right: 8.25px;
                   }
                 }
